[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fathom-certs"
version = "0.2.1"
description = "Certificate depth sounding for the CA/Browser Forum phase-down (SC-081v3)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NEATLABS" }]
keywords = ["tls", "ssl", "certificates", "pki", "ca-browser-forum", "sc-081",
            "certificate-transparency", "security", "osint", "vciso"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = ["cryptography>=42.0"]

[project.optional-dependencies]
gui = ["PyQt6>=6.6"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://neatlabs.ai"
Repository = "https://github.com/neatlabs-ai/fathom"
Issues = "https://github.com/neatlabs-ai/fathom/issues"

[project.scripts]
fathom = "fathom.cli:main"
fathom-gui = "fathom.gui:main"

[tool.setuptools]
packages = ["fathom"]

[tool.setuptools.package-data]
fathom = ["assets/*.html", "assets/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "E741", "E701", "E702", "E731", "UP031"]
